<resources>
    <string name="app_name">генератор случайностей</string>
    <string name="numbers">Числа</string>
    <string name="coin">Бросить монетку</string>
    <string name="roshambo">Камень Ножница Бумака</string>
    <string name="cube">Бросить кубик</string>
    <string name="colors">Цвета</string>
    <string name="letters">Буквы</string>
    <string name="passwords">Пароли</string>
    <string name="clickForCopy">нажмите, чтобы скопировать</string>
</resources>
